@@ -235,7 +235,7 @@ pi ; ==> 3.141592653589793
 ;;; Murmel supports symbols and lists as well as other atoms
 ;;; that are not symbols.
 ;;; These other atoms are double precision floating point numbers,
-;;; 64bit integer numbers, strings and characters. Custom primitives
+;;; 64bit integer numbers, vectors, strings and characters. Custom primitives
 ;;; may support additional atoms.
 
 ; Murmel treats symbols case-insensitive.
@@ -678,6 +678,16 @@ pi ; ==> 3.141592653589793
 ; - `numberp` returns `t` for all Java Number types.
 ; - `integerp` returns `t` for Murmel's integral number type (which internally is a `Long`).
 ; - `floatp` returns `t` for Murmel's decimal number type (which internally is a `Double`).
+
+; = vector, vectorp, svref
+;
+; Vectors are on-dimensional arrays (which internally are Object[]).
+;
+; Example usage:
+
+(define *v* (vector 1 2 3))
+(vectorp *v*) ; ==> t
+(svref *v* 1) ; ==> 2
 
 ; = (assoc key alist) -> cons or nil
 ;
